<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tempoSeekbar"
        android:max="100"
        android:indeterminate="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sensorThresholdSlider"
        android:layout_below="@+id/accelerometerThresholdView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tempoSeekbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sensor_threshold"
        android:id="@+id/accelerometerThresholdView"
        android:layout_below="@+id/tempoSeekbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pause_threshold"
        android:id="@+id/pauseView"
        android:layout_below="@+id/sensorThresholdSlider" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pauseSlider"
        android:layout_below="@+id/pauseView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tempoSeekbar"
        android:layout_alignEnd="@+id/tempoSeekbar" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recordButton"
        android:onClick="onRecordClick"
        android:src="@drawable/ic_action_mic"
        android:background="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/playButton" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/play"
        android:id="@+id/playButton"
        android:onClick="onPlayClick"
        android:src="@drawable/ic_action_play"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tempoSeekbar"
        android:layout_centerHorizontal="true" />

    <com.example.pducic.noisemaker.RecordingsListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/recordingsList"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pauseSlider"
        android:layout_above="@+id/leftConfigButton" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playingSeekBar"
        android:layout_above="@+id/recordButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalizeSong"
        android:id="@+id/checkBox"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/playButton"
        android:layout_toStartOf="@+id/playButton"
        android:onClick="onNormalizeSongCheckboxToggle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leftConfigButton"
        android:id="@+id/leftConfigButton"
        android:minHeight="100dp"
        android:layout_above="@+id/playingSeekBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/playTempoButton"
        android:layout_toStartOf="@+id/playTempoButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rightConfigButton"
        android:id="@+id/rightConfigButton"
        android:layout_above="@+id/playingSeekBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:ellipsize="start"
        android:minHeight="100dp"
        android:layout_toEndOf="@+id/playTempoButton"
        android:layout_toRightOf="@+id/playTempoButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tempo"
        android:id="@+id/playTempoButton"
        android:clickable="true"
        android:enabled="true"
        android:onClick="onPlayTempoClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
